# pyo3-polars

./: .gitignore  Cargo.toml  README  README.md  dprint.json  rust-toolchain.toml
.github/workflows/: CI.yml
example/: Makefile  requirements.txt  run.py
example/derive_expression/: Makefile  run.py
example/derive_expression/expression_lib/: Cargo.toml  pyproject.toml
example/derive_expression/expression_lib/expression_lib/: __init__.py  date_util.py  dist.py  extension.py  language.py  panic.py
example/derive_expression/expression_lib/src/: distances.rs  expressions.rs  lib.rs
example/derive_expression/extend_polars/: Cargo.toml
example/extend_polars/: Cargo.toml  pyproject.toml
example/extend_polars/src/: lib.rs
example/extend_polars_python_dispatch/: Makefile  requirements.txt  run.py
example/extend_polars_python_dispatch/extend_polars/: Cargo.toml  pyproject.toml
example/extend_polars_python_dispatch/extend_polars/src/: lib.rs  parallel_jaccard_mod.rs
example/io_plugin/: Makefile  requirements.txt
example/io_plugin/io_plugin/: Cargo.toml  pyproject.toml
example/io_plugin/io_plugin/io_plugin/: __init__.py
example/io_plugin/io_plugin/src/: lib.rs  samplers.rs
pyo3-polars/: Cargo.toml
pyo3-polars-derive/: Cargo.toml  README.md
pyo3-polars-derive/src/: attr.rs  keywords.rs  lib.rs
pyo3-polars-derive/tests/: 01.rs  02.rs
pyo3-polars/src/: alloc.rs  derive.rs  error.rs  export.rs  gil_once_cell.rs  lib.rs  types.rs  utils.rs
pyo3-polars/src/ffi/: to_py.rs  to_rust.rs
