[workspace]
resolver = "2"
members = [
  "example/derive_expression/expression_lib",
  "example/extend_polars_python_dispatch/extend_polars",
  "pyo3-polars",
  "pyo3-polars-derive",
]

[workspace.dependencies]
polars = { version = "0.41.0", default-features = false }
polars-core = { version = "0.41.0", default-features = false }
polars-ffi = { version = "0.41.0", default-features = false }
polars-plan = { version = "0.41.0", default-feautres = false }
polars-lazy = { version = "0.41.0", default-features = false }

[patch.crates-io]
polars = { git = "https://github.com/pola-rs/polars.git" }
polars-core = { git = "https://github.com/pola-rs/polars.git" }
polars-ffi = { git = "https://github.com/pola-rs/polars.git" }
polars-plan = { git = "https://github.com/pola-rs/polars.git" }
polars-lazy = { git = "https://github.com/pola-rs/polars.git" }
