[workspace]
resolver = "2"
members = [
  "example/derive_expression/expression_lib",
  "example/extend_polars_python_dispatch/extend_polars",
  "example/io_plugin/io_plugin",
  "pyo3-polars",
  "pyo3-polars-derive",
]

[workspace.dependencies]
polars = { version = "0.48.1", default-features = false }
polars-core = { version = "0.48.1", default-features = false }
polars-arrow = { version = "0.48.1", default-features = false }
polars-ffi = { version = "0.48.1", default-features = false }
polars-plan = { version = "0.48.1", default-features = false }
polars-lazy = { version = "0.48.1", default-features = false }
polars-python = { version = "0.48.1", default-features = false }
polars-utils = { version = "0.48.1", default-features = false }

[workspace.dependencies.arrow]
package = "polars-arrow"
version = "0.48.1"
path = "../polars/crates/polars-arrow"
default-features = false

# [patch.crates-io]
# polars = { git = "https://github.com/pola-rs/polars.git" }
# polars-core = { git = "https://github.com/pola-rs/polars.git" }
# polars-arrow = { git = "https://github.com/pola-rs/polars.git" }
# polars-ffi = { git = "https://github.com/pola-rs/polars.git" }
# polars-plan = { git = "https://github.com/pola-rs/polars.git" }
# polars-lazy = { git = "https://github.com/pola-rs/polars.git" }
# polars-python = { git = "https://github.com/pola-rs/polars.git" }
# polars-utils = { git = "https://github.com/pola-rs/polars.git" }
