[package]
name = "pyo3-polars-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/run.rs"

[dependencies]
#polars-core = {git="https://github.com/pola-rs/polars", branch="plugin", version = "*", default-features=false}
#polars-ffi = {git="https://github.com/pola-rs/polars", branch="plugin", version = "*", default-features=false}
polars-core = {path = "../../polars/crates/polars-core", version = "*", default-features=false}
polars-ffi = {path= "../../polars/crates/polars-ffi", version = "*", default-features=false}
polars-plan = {path= "../../polars/crates/polars-plan", version = "*", default-feautres=false}
syn = {version = "2", features= ["full", "extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }
