[package]
name = "pyo3-polars-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/run.rs"

[dependencies]
polars-core = {workspace = true}
polars-ffi = {workspace = true}
polars-plan = {workspace = true}
syn = {version = "2", features= ["full", "extra-traits"]}
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }
