[package]
name = "pyo3-polars-derive"
version = "0.14.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/pola-rs/pyo3-polars"
description = "Proc-macro's for pyo3-polars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/run.rs"

[dependencies]
polars-core = { workspace = true }
polars-ffi = { workspace = true }
polars-plan = { workspace = true }
polars-arrow = { workspace = true }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["full", "extra-traits"] }

[dev-dependencies]
trybuild = { version = "1", features = ["diff"] }
pyo3-polars = { version = "0.20.0", path = "../pyo3-polars", features = [
  "derive",
] } # Include for integration tests
