[package]
name = "pyo3-polars"
version = "0.7.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/pola-rs/pyo3-polars"
description = "Expression plugins and PyO3 types for polars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = { version = "0.2.1", optional = true }
polars = { workspace = true, default-features = false }
polars-core = { workspace = true, default-features = false }
polars-ffi = { workspace = true, optional = true }
polars-lazy = { workspace = true, optional = true }
polars-plan = { workspace = true, optional = true }
pyo3 = "0.19.0"
pyo3-polars-derive = { version = "0.1.0", path = "../pyo3-polars-derive", optional = true }
thiserror = "1"

[features]
lazy = ["polars/serde-lazy", "polars-plan", "polars-lazy/serde", "ciborium"]
derive = ["pyo3-polars-derive", "polars-plan", "polars-ffi"]
