[package]
name = "extend_polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "extend_polars"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
pyo3-polars = {version = "*", path = "../../pyo3-polars"}
polars-core = {version = "*"}
polars = {version = "*", features=["fmt"]}
rayon = "0.9"
