[package]
name = "extend_polars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "extend_polars"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
pyo3-polars = { version = "*", path = "../../pyo3-polars", features = ["lazy"] }
polars-core = { version = "0.32.0" }
polars-lazy =  "*"
polars = { version = "0.32.0", features = ["fmt"] }
rayon = "1.6"
