[package]
name = "expression_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "expression_lib"
crate-type = ["cdylib"]

[dependencies]
num = "*"
polars = { workspace = true, features = ["fmt", "dtype-date", "timezones"], default-features = false }
polars-arrow = { workspace = true, default-features = false }
polars-plan = { workspace = true, default-features = false }
pyo3 = { version = "0.25", features = ["abi3-py38"] }
pyo3-polars = { version = "*", path = "../../../pyo3-polars", features = ["derive"] }
rayon = "1.7.0"
serde = { version = "1", features = ["derive"] }
