[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
version = "0.0.1"
name = "expression_lib"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
