[package]
name = "extend_polars"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "extend_polars"
crate-type = ["cdylib"]

[dependencies]
polars = { workspace = true, features = ["fmt", "polars-io"] }
polars-core = { workspace = true }
polars-lazy = { workspace = true }
polars-plan = { workspace = true, features = ["serde"] }
pyo3 = { version = "0.24.2", features = ["extension-module"] }
pyo3-polars = { version = "*", path = "../../../pyo3-polars", features = ["lazy"] }
rayon = "1.10"
